--- a/views/addpost.handlebars
+++ b/views/addpost.handlebars
@@ -1,43 +1,23 @@
-
-    {{> nav user=user.name}}
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <h2>Add Post</h2>
-          <form class="addpostFrom">
-            <div class="form-group">
-              <label for="title">Title</label>
-              <input
-                type="input"
-                class="form-control"
-                id="title-input"
-                placeholder="Title"
-              />
-            </div>
-            <div class="form-group">
-              <label for="text-input">Post</label>
-              <textarea
-                type="textarea"
-                class="form-control"
-                id="post-input"
-                placeholder="Post"
-              ></textarea>
-            </div>
-            <div
-              style="display: none;"
-              id="alert"
-              class="alert alert-danger"
-              role="alert"
-            >
-              <span
-                class="glyphicon glyphicon-exclamation-sign"
-                aria-hidden="true"
-              ></span>
-              <span class="sr-only">Error:</span> <span class="msg"></span>
-            </div>
-            <button type="submit" class="btn btn-default">Add post</button>
-          </form>
+{{> nav user=user.name}}
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h2>Add Post</h2>
+      <form class="addpostFrom">
+        <div class="form-group">
+          <label for="title">Title</label>
+          <input type="input" class="form-control" id="title-input" placeholder="Title" />
         </div>
-      </div>
+        <div class="form-group">
+          <label for="text-input">Post</label>
+          <textarea type="textarea" class="form-control" id="post-input" placeholder="Post"></textarea>
+        </div>
+        <div style="display: none;" id="alert" class="alert alert-danger" role="alert">
+          <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+          <span class="sr-only">Error:</span> <span class="msg"></span>
+        </div>
+        <button type="submit" class="btn btn-default">Add post</button>
+      </form>
     </div>
-
+  </div>
+</div>
