--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,13 +1,11 @@
-
-    {{> nav user=user.name}}
-    <br />
-    <div class="container">
-      <div class="row">
-        <div class="col" id="posts">
-          <h1>Home Page</h1>
-        </div>
-      </div>
-    </div>
-    
-    
-  
+{{> nav user=user.name}}
+<br />
+<div class="container">
+  <div class="row">
+    <h1 class="display-4">Recent posts by users</h1>
+  </div>
+  <hr>
+  <div class="row">
+    <div class="col" id="posts"></div>
+  </div>
+</div>
