--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,23 +1,24 @@
-
-    <nav class="navbar navbar-light bg-light justify-content-between">
-      <a class="navbar-brand" href="/">Cryptofolio</a>
-      <form class="form-inline">
-        {{#if user}}
-        <h3>Welcome {{user}}</h3>
-        <a class="btn btn-outline-success mx-2 my-2 my-sm-0" href="/cms">
-          CMS
-        </a>
-        <a class="btn btn-outline-success mx-2 my-2 my-sm-0" href="/logout">
-          Logout
-        </a>
-        {{/if}}
-        {{#unless user}}
-        <a class="btn btn-outline-success mx-2 my-2 my-sm-0" href="/signup">
-          Signup
-        </a>
-        <a class="btn btn-outline-success mx-2 my-2 my-sm-0" href="/login">
-          Login
-        </a>
-        {{/unless}}
-      </form>
-    </nav>
+<nav class="navbar navbar-light bg-light justify-content-between">
+  <a class="navbar-brand" href="/">Cryptofolio</a>
+  <form class="form-inline">
+    {{#if user}}
+    <button type="button" class="btn btn-primary">
+      Logged In as: <span class="badge badge-light">{{ user }} </span>
+    </button>
+    <a class="btn btn-outline-success mx-2 my-2 my-sm-0" href="/cms">
+      CMS
+    </a>
+    <a class="btn btn-outline-success mx-2 my-2 my-sm-0" href="/logout">
+      Logout
+    </a>
+    {{/if}}
+    {{#unless user}}
+    <a class="btn btn-outline-success mx-2 my-2 my-sm-0" href="/signup">
+      Signup
+    </a>
+    <a class="btn btn-outline-success mx-2 my-2 my-sm-0" href="/login">
+      Login
+    </a>
+    {{/unless}}
+  </form>
+</nav>
