--- a/views/addpost.handlebars
+++ b/views/addpost.handlebars
@@ -12,6 +12,30 @@
           <label for="text-input">Post</label>
           <textarea type="textarea" class="form-control" id="post-input" placeholder="Post"></textarea>
         </div>
+        <div class="form-group">
+        <label for="coin-input">Coin</label>
+        <select class="custom-select" id="coin-input">
+          <option selected value="Bitcoin">Bitcoin</option>
+          <option value="Ethereum">Ethereum</option>
+          <option value="XRP">XRP</option>
+          <option value="Tether">Tether</option>
+          <option value="Bitcoin Cash">Bitcoin Cash</option>
+          <option value="Bitcoin SV">Bitcoin SV</option>
+          <option value="Litecoin">Litecoin</option>
+          <option value="Binance Coin">Binance Coin</option>
+        </select>
+        </div>
+        <div class="form-group">
+          <label for="price-input">Price</label>
+          <input type="number" class="form-control" id="price-input" placeholder="0.00" />
+        </div>
+        <div class="form-group">
+        <label for="type-input">Post type</label>
+        <select class="custom-select" id="type-input">
+          <option selected value="Ask">Ask</option>
+          <option value="Bid">Bid</option>
+        </select>
+        </div>   
         <div style="display: none;" id="alert" class="alert alert-danger" role="alert">
           <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
           <span class="sr-only">Error:</span> <span class="msg"></span>
