--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,9 @@
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
   <body>
+    <video autoplay muted loop id="myVideo">
+      <source src="/assets/img/bg.mp4" type="video/mp4" />
+    </video>
     {{{ body }}}
     <script type="text/javascript" src="assets/js/index.js"></script>
     <script type="text/javascript" src="assets/js/addPost.js"></script>
