--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,9 +1,9 @@
 
     {{> nav user=user.name}}
     <div class="container">
-      <div class="row">
+      <div class="row my-4" style="width: 50%;">
         <div class="col">
-          <h2>Login Form</h2>
+          <h2>Enter your login details below</h2>
           <form class="login">
             <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
@@ -23,10 +23,8 @@
                 placeholder="Password"
               />
             </div>
-            <button type="submit" class="btn btn-default">Login</button>
+            <button type="submit" class="btn btn-primary">Login</button>
           </form>
-          <br />
-          <p>Or sign up <a href="/signup">here</a></p>
         </div>
       </div>
     </div>
