--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
 <br />
 <div class="container">
   <div class="row">
-    <h1 class="display-4">Recent posts by users</h1>
+    <h1 class="display-4 text-white" >Recent posts by users</h1>
   </div>
   <div class="row">
     <div class="col" id="posts" style="overflow-y: scroll; height:75vh;">
