--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 
     {{> nav user=user.name}}
     <div class="container">
-      <div class="row my-4" style="width: 50%;">
+      <div class="row my-4 text-white" style="width: 50%;">
         <div class="col">
           <h2>Enter your login details below</h2>
           <form class="login">
