--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-light bg-none justify-content-between" ">
-  <a class="navbar-brand" href="/">Cryptofolio</a>
+<nav class="navbar navbar-light bg-none justify-content-between" >
+  <a class="navbar-brand text-white" href="/">Cryptofolio</a>
   <form class="form-inline">
     {{#if user}}
     <button type="button" class="btn btn-primary">
