--- a/views/addpost.handlebars
+++ b/views/addpost.handlebars
@@ -1,9 +1,9 @@
 {{> nav user=user.name}}
 <div class="container">
-  <div class="row">
-    <div class="col">
+  <div class="row mr-4 text-white">
+    <div class="col text-white mx-auto" style="width: 50%;">
       <h2>Add Post</h2>
-      <form class="addpostFrom">
+      <form class="addpostFrom" style="width: 50%;">
         <div class="form-group">
           <label for="title">Title</label>
           <input type="input" class="form-control" id="title-input" placeholder="Title" />
