change button layout

--- a/views/cms.handlebars
+++ b/views/cms.handlebars
@@ -3,9 +3,9 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <a class="btn btn-success mx-2 my-4" href="/addpost">
-        Add post
-      </a>
+      <h4 style="text-align: right;"><a class="btn btn-success mx-2 my-4" href="/addpost">
+        Add a new post
+      </a></h4>
     </div>
   </div>
   <div class="row">
