--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,9 +1,10 @@
 
     {{> nav user=user.name }}
     <div class="container">
-      <div class="row my-4 text-white" style="width: 50%;">
+      <div class="row text-white" style="margin-top: 100px;">
         <div class="col">
-          <h2>Enter signup details below</h2>
+          <div style="width: 30%; margin: 0 auto;">
+          <h2>Signup</h2>
           <form class="signup">
             <div class="form-group">
               <label for="name">Name</label>
@@ -46,6 +47,7 @@
             </div>
             <button type="submit" class="btn btn-primary">Sign Up</button>
           </form>
+          </div>
         </div>
       </div>
     </div>
