--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,9 +1,10 @@
 
     {{> nav user=user.name}}
     <div class="container">
-      <div class="row my-4 text-white" style="width: 50%;">
+      <div class="row text-white" style="margin-top: 100px;">
         <div class="col">
-          <h2>Enter your login details below</h2>
+          <div style="width: 30%; margin: 0 auto;">
+          <h2>Login</h2>
           <form class="login">
             <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
@@ -25,6 +26,7 @@
             </div>
             <button type="submit" class="btn btn-primary">Login</button>
           </form>
+          </div>
         </div>
       </div>
     </div>
