--- a/views/cms.handlebars
+++ b/views/cms.handlebars
@@ -3,9 +3,9 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h4 style="text-align: right;"><a class="btn btn-success mx-2 my-4" href="/addpost">
+      <h3 class="text-white" style="text-align: center;">Edit your posts or <a class="btn btn-success mx-2 my-4" href="/addpost">
         Add a new post
-      </a></h4>
+      </a></h3>
     </div>
   </div>
   <div class="row">
