--- a/views/addpost.handlebars
+++ b/views/addpost.handlebars
@@ -2,8 +2,9 @@
 <div class="container">
   <div class="row mr-4 text-white">
     <div class="col text-white mx-auto" style="width: 50%;">
-      <h2>Add Post</h2>
-      <form class="addpostFrom" style="width: 50%;">
+      <div class="mx-auto" style="width: 50%;">
+      <h3>Add a post</h3>
+      <form class="addpostFrom" style="">
         <div class="form-group">
           <label for="title">Title</label>
           <input type="input" class="form-control" id="title-input" placeholder="Title" />
@@ -42,6 +43,7 @@
         </div>
         <button type="submit" class="btn btn-default">Add post</button>
       </form>
+      </div>
     </div>
   </div>
 </div>
