--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,22 +1,22 @@
 <nav class="navbar navbar-light bg-none justify-content-between" >
-  <a class="navbar-brand text-white" href="/">Cryptofolio</a>
+  <a class="navbar-brand text-white" href="/"><img src="assets/img/logo.png" alt="logo" style="height: 80px;"></a>
   <form class="form-inline">
     {{#if user}}
-    <button type="button" class="btn btn-primary">
+    <button type="button" class="btn btn-primary mx-2 my-2">
       Logged In as: <span class="badge badge-light">{{ user }} </span>
     </button>
-    <a class="btn btn-outline-primary mx-2 my-2 my-sm-0" href="/cms">
+    <a class="btn btn-primary mx-2 my-2 my-sm-0" href="/cms">
       Manage your posts
     </a>
-    <a class="btn btn-outline-danger mx-2 my-2 my-sm-0" href="/logout">
+    <a class="btn btn-danger mx-2 my-2 my-sm-0" href="/logout">
       Logout
     </a>
     {{/if}}
     {{#unless user}}
-    <a class="btn btn-outline-primary mx-2 my-2 my-sm-0" href="/login">
+    <a class="btn btn-primary mx-2 my-2 my-sm-0" href="/login">
       Login
     </a>
-    <a class="btn btn-outline-primary mx-2 my-2 my-sm-0" href="/signup">
+    <a class="btn btn-success mx-2 my-2 my-sm-0" href="/signup">
       Signup
     </a>
     {{/unless}}
