--- a/views/cms.handlebars
+++ b/views/cms.handlebars
@@ -14,10 +14,12 @@
   </div>
   <div class="row">
     <div class="col">
-      <div style="display: none;" id="alert" class="alert alert-danger" role="alert">
-        <span class="sr-only">Error:</span> <span class="msg"></span>
+      <div id="cms">
+        <div style="display: none;" id="alert" class="alert alert-danger mx-3 my-3" role="alert">
+          <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+          <span class="sr-only">Error:</span> <span class="msg"></span>
+        </div>
       </div>
-      <div id="cms"></div>
     </div>
   </div>
 </div>
