--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -25,6 +25,10 @@
               />
             </div>
             <button type="submit" class="btn btn-primary">Login</button>
+            <div style="display: none;" id="alert" class="alert alert-danger mx-3 my-3" role="alert">
+          <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+          <span class="sr-only">Error:</span> <span class="msg"></span>
+        </div>
           </form>
           </div>
         </div>
