--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -46,6 +46,10 @@
               <span class="sr-only">Error:</span> <span class="msg"></span>
             </div>
             <button type="submit" class="btn btn-primary">Sign Up</button>
+            <div style="display: none;" id="alert" class="alert alert-danger mx-3 my-3" role="alert">
+          <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+          <span class="sr-only">Error:</span> <span class="msg"></span>
+        </div>
           </form>
           </div>
         </div>
