--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,9 +1,10 @@
 
     {{> nav user=user.name}}
     <div class="container">
-      <div class="row">
+      <div class="row text-white" style="margin-top: 100px;">
         <div class="col">
-          <h2>Login Form</h2>
+          <div style="width: 30%; margin: 0 auto;">
+          <h2>Login</h2>
           <form class="login">
             <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
@@ -23,10 +24,13 @@
                 placeholder="Password"
               />
             </div>
-            <button type="submit" class="btn btn-default">Login</button>
+            <button type="submit" class="btn btn-primary">Login</button>
+            <div style="display: none;" id="alert" class="alert alert-danger mx-3 my-3" role="alert">
+          <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+          <span class="sr-only">Error:</span> <span class="msg"></span>
+        </div>
           </form>
-          <br />
-          <p>Or sign up <a href="/signup">here</a></p>
+          </div>
         </div>
       </div>
     </div>
