--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row text-white" style="margin-top: 100px;">
         <div class="col">
-          <div style="width: 30%; margin: 0 auto;">
+          <div style="width: 300px; margin: 0 auto;">
           <h2>Signup</h2>
           <form class="signup">
             <div class="form-group">
