--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row text-white" style="margin-top: 100px;">
         <div class="col">
-          <div style="width: 300px; margin: 0 auto;">
+          <div style="width: 30%; margin: 0 auto;">
           <h2>Login</h2>
           <form class="login">
             <div class="form-group">
@@ -34,6 +34,5 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="assets/js/login.js"></script>
     
  
