--- a/views/addpost.handlebars
+++ b/views/addpost.handlebars
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row mr-4 text-white">
     <div class="col text-white mx-auto" style="width: 50%;">
-      <div class="mx-auto" style="width: 50%;">
+      <div class="mx-auto" style="min-width: 300px; max-width: 500px">
       <h3>Add a post</h3>
       <form class="addpostFrom" style="">
         <div class="form-group">
@@ -11,7 +11,7 @@
         </div>
         <div class="form-group">
           <label for="text-input">Post</label>
-          <textarea type="textarea" class="form-control" id="post-input" placeholder="Post"></textarea>
+          <textarea type="textarea" rows="4" class="form-control" id="post-input" placeholder="Post"></textarea>
         </div>
         <div class="form-group">
         <label for="coin-input">Coin</label>
@@ -47,3 +47,4 @@
     </div>
   </div>
 </div>
+<script type="text/javascript" src="assets/js/addpost.js"></script>
