--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,23 +1,35 @@
+<nav class="navbar navbar-expand-md navbar-dark bg-none">
+  <a class="navbar-brand " href="/"><img src="assets/img/logo.png" alt="logo" style="height: 60px;"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <nav class="navbar navbar-light bg-light justify-content-between">
-      <a class="navbar-brand" href="/">Cryptofolio</a>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
       <form class="form-inline">
-        {{#if user}}
-        <h3>Welcome {{user}}</h3>
-        <a class="btn btn-outline-success mx-2 my-2 my-sm-0" href="/cms">
-          CMS
-        </a>
-        <a class="btn btn-outline-success mx-2 my-2 my-sm-0" href="/logout">
-          Logout
-        </a>
-        {{/if}}
-        {{#unless user}}
-        <a class="btn btn-outline-success mx-2 my-2 my-sm-0" href="/signup">
-          Signup
-        </a>
-        <a class="btn btn-outline-success mx-2 my-2 my-sm-0" href="/login">
-          Login
-        </a>
-        {{/unless}}
-      </form>
-    </nav>
+    {{#if user}}
+    <button type="button" class="btn btn-primary mx-2 my-2">
+      Logged In as: <span class="badge badge-light">{{ user }} </span>
+    </button>
+    <a class="btn btn-primary mx-2 my-2 my-sm-0" href="/cms">
+      Manage your posts
+    </a>
+    <a class="btn btn-danger mx-2 my-2 my-sm-0" href="/logout">
+      Logout
+    </a>
+    {{/if}}
+    {{#unless user}}
+    <a class="btn btn-primary mx-2 my-2 my-sm-0" href="/login">
+      Login
+    </a>
+    <a class="btn btn-success mx-2 my-2 my-sm-0" href="/signup">
+      Signup
+    </a>
+    {{/unless}}
+  </form>
+      
+     
+    </ul>
+    
+  </div>
+</nav>
