--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -24,6 +24,10 @@
                 placeholder="Password"
               />
             </div>
+            <div style="display: none;" id="alert" class="alert alert-danger" role="alert">
+          <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+          <span class="sr-only">Error:</span> <span class="msg"></span>
+          </div>
             <button type="submit" class="btn btn-primary">Login</button>
             <div style="display: none;" id="alert" class="alert alert-danger mx-3 my-3" role="alert">
           <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
