--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-none">
+<nav class="navbar navbar-expand-md navbar-dark bg-none light-bg" >
   <a class="navbar-brand " href="/"><img src="assets/img/logo.png" alt="logo" style="height: 60px;"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
