--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -28,7 +28,7 @@
           <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
           <span class="sr-only">Error:</span> <span class="msg"></span>
           </div>
-            <button type="submit" class="btn btn-primary">Login</button>
+            <button type="submit" class="btn btn-primary">Login</button> <div class="margin-top">or <a href="/signup">signup</a></div>
             <div style="display: none;" id="alert" class="alert alert-danger mx-3 my-3" role="alert">
           <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
           <span class="sr-only">Error:</span> <span class="msg"></span>
